# phira-content-policy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: checks.yml  deploy.yml
data/artists/: 3r2.toml  7mai.toml  a_hisa.toml  a_i.toml  a_saka.toml  ak_q.toml  akira_complex.toml  anubasu-anubasu.toml  aoi.toml  aoi_feat_桃雛なの.toml  apo11o_program.toml  aquasine.toml  aran.toml  arcaea_sound_team.toml  arcaea_sound_team_against_etia.toml  arforest.toml  arik_kau_delay_アラ_かゆき_でり.toml  ashrount.toml  aspect.toml  blacklolita.toml  blacky.toml  blackyooh.toml  c-show.toml  cosmo_暴走p.toml  cosmograph.toml  cybermiso.toml  daisuke_kurosawa.toml  dia.toml  dimier_lisb.toml  dj_genki.toml  dj_myosuke.toml  dj_noriken.toml  ebimayo.toml  edelritter.toml  endorfin.toml  essence_of_twilight.toml  etia.toml  f_n.toml  feryquitous.toml  fn.toml  (+143 more)
data/rights_holders/disney/: _policy.toml
docs/: TODO.md  prd.md
rust/: .gitignore  Cargo.toml
rust/data/: Cargo.toml  build.rs
rust/data/src/: lib.rs  loader.rs  main.rs
rust/meili/: Cargo.toml
rust/meili/src/: lib.rs
rust/types/: Cargo.toml
scripts/: validate.ts
src/: App.vue
src/components/: ArtistCard.vue  ResultsPanel.vue  RightsHolderCard.vue  TrackHitCard.vue
src/composables/: useSearch.ts
src/data/: schema.ts
src/search/: index.ts
web/: pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/scripts/: content-policy-plugin.ts  validate-json.ts  validate.ts
web/src/: style.css
(+60 files in other folders)
