[package]
name = "phira-content-policy-data"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
phira-content-policy-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
phira-content-policy-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
